# template_exe

./: CMakeLists.txt  vcpkg.json
_github/workflows/: release-tag.yml
src/: main.cpp
